--- a/style.css
+++ b/style.css
@@ -1,44 +1,53 @@
 
 
-
+/* Background */
 body {
     background-color: darkred;
     text-align: center;
 }
-
 
 .header {
     margin: 70px;
     color: white;
 }
 
-
 .outerContainer {
-    
     display: flex;
     justify-content: space-evenly;
-    
+    flex-wrap: wrap-reverse;
+}
+
+
+/* Panel */
+.panel {
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    gap: 50px;
+}
+
+#value {
+    width: 40px;
+    margin-right: 15px;
 }
 
 
 
-
+/* Grid */
 .container {    
- 
     border: 5px solid white;
     height: 600px;
     width: 600px;
     display: flex;
     flex-direction: column; 
+    margin: 20px;
 }
-
 
 .row {
     justify-content: center;
     flex: 1;
     display:flex;
 }
-
 
 .row div {
     flex: 1;
